--- a/bitrise.yml
+++ b/bitrise.yml
@@ -9,6 +9,7 @@ app:
   - BITRISE_STEP_ID: microsoft-teams-adaptive-card
   - BITRISE_STEP_VERSION: "1.0.0"
   - BITRISE_STEP_GIT_CLONE_URL: https://github.com/HUK-COBURG/bitrise-step-microsoft-teams-adaptive-card.git
+  - MY_STEPLIB_REPO_FORK_GIT_URL: git@github.com:HUK-COBURG/shared-bitrise-steplib.git
 
 workflows:
   success-test:
